--- a/index.html
+++ b/index.html
@@ -126,7 +126,18 @@
     </div>
   </div>
 </body>
+ <script>
+    let animationPaused = false;
 
+    document.addEventListener("mousedown", function(e) {
+      if (e.button === 0) {
+        animationPaused = !animationPaused;
+        window.dispatchEvent(new CustomEvent("toggleAnimation", {
+          detail: { paused: animationPaused }
+        }));
+      }
+    });
+  </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
