--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
         <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
       </div>
     </div>
+      <div class="rweer">
+      <img src="img/dw.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/hat.svg" alt="" class="hat">
+      <div class="wish">
+        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
+        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+      </div>
+    </div>
     <div class="seven">
       <div class="baloons">
         <img src="img/ballon2.svg" alt="">
